<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.prudhvi.ntr"
    android:background="@drawable/home_banner"
    style="@style/Parent" >
    <LinearLayout
    	android:id="@+id/drawerContainer"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		orientation="horizontal"
		android:gravity="center" >
		<SlidingDrawer
			android:id="@+id/drawer"
	     	android:layout_width="fill_parent" 
	     	android:layout_height="365dip"
	     	android:allowSingleTap="true"
	     	android:animateOnClick="true"
	     	android:orientation="horizontal"
	     	android:handle="@+id/drawerHandle"
	     	android:content="@+id/content" >
	     	<ImageView
				android:id="@+id/drawerHandle"
				android:src="@drawable/pullover"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
         	<LinearLayout
         		android:id="@+id/content"
				android:orientation="vertical"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:background="@drawable/cloth" >
	         	<LinearLayout
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="bottom" >
					<LinearLayout
						android:layout_marginLeft="10dip"
						android:gravity="center"
						style="@style/menu_icon_layout" >
						<ImageView
							android:id="@+id/movies"
							android:src="@drawable/movies"
							android:gravity="center"
							style="@style/menu_icon_image" />
						<TextView
							android:text="@string/movies"
							android:shadowColor="#0004BE"
							style="@style/menu_icon_text" />
					</LinearLayout>
					<LinearLayout
						android:layout_marginLeft="5dip"
						android:gravity="center"
						style="@style/menu_icon_layout" >
						<ImageView
							android:id="@+id/biography"
							android:src="@drawable/biography"
							style="@style/menu_icon_image" />
						<TextView
							android:text="@string/biography"
							android:shadowColor="#C7250C"
							style="@style/menu_icon_text" />
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="bottom" >
					<LinearLayout
						android:layout_marginLeft="10dip"
						android:gravity="center"
						style="@style/menu_icon_layout" >
						<ImageView
							android:id="@+id/pictures"
							android:src="@drawable/pictures"
							android:gravity="center"
							style="@style/menu_icon_image" />
						<TextView
							android:text="@string/pictures"
							android:shadowColor="#903F0E"
							style="@style/menu_icon_text" />
					</LinearLayout>
					<LinearLayout
						android:layout_marginLeft="5dip"
						android:gravity="center"
						style="@style/menu_icon_layout" >
						<ImageView
							android:id="@+id/dialogues"
							android:src="@drawable/dialogues"
							android:gravity="center"
							style="@style/menu_icon_image" />
						<TextView
							android:shadowColor="#2B8A12"
							android:text="@string/dialogues"
							style="@style/menu_icon_text" />
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:orientation="horizontal" 
					android:gravity="bottom" >
					<LinearLayout
						android:layout_marginLeft="10dip" 
						android:gravity="center"
						style="@style/menu_icon_layout" >
						<ImageView
							android:id="@+id/videos"
							android:src="@drawable/videos"
							android:gravity="center"
							style="@style/menu_icon_image" />
						<TextView
							android:shadowColor="#FF0000"
							android:text="@string/videos"
							style="@style/menu_icon_text" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
	 	</SlidingDrawer>
	</LinearLayout>
   	<com.prudhvi.ntr.LightFocus
   		android:id="@+id/LightEffect"
        android:layout_width="fill_parent"
		android:layout_height="fill_parent" />
</FrameLayout>